Bug 27951: Re-enable set text "" and Reset for inputs/textareas.  This fix coutesy of jfrancis r=self, waqar